refactor: updated NotificationServiceTest to use TeamSubscriptionRepository and adjust match data